--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
             <img src="./images/logo.PNG" alt="logo" />
           </div>
           <div class="heading">
-            <h1>רוצים להיות ?אלופים</h1>
+            <h1>רוצים להיות
+              אלופים?
+              
+              </h1>
           </div>
           <div class="header_badge">
             <div class="text">
