--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="container">
         <div class="header_wrap">
           <div class="logo">
-            <img src="./images/logo.PNG" alt="logo" />
+            <img src="./images/logo.png" alt="logo" />
           </div>
           <div class="heading">
             <h1>רוצים להיות
